k8s/native-dep- stage2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expense-ui-service
  namespace: expense-ns
spec:
  type: ClusterIP
  selector:
    app: expense-ui
  ports:
  - port: 80
    targetPort: 8080
