k8s/native-dep- stage2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expense-ui-ingress
  namespace: expense-ns
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dev.ivoxa.ai
    secretName: expense-ui-tls
  rules:
  - host: dev.ivoxa.ai
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: expense-ui-service
            port:
              number: 80
